--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Joke Generator</title>
 </head>
 <body>
-    
+    <div class="joke">
+        <h1>Random Programming Jokes</h1>
+        <div id="setup" class="bubble"></div>
+        <div id="punchline"></div>
+        <button id="punchlineBtn" class="hidden">Get Punchline</button>
+        <button id="newJokeBtn">New Joke</button>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
